<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="base_url">http://changemymood.herokuapp.com/api/</string>
    <!-- <string name="base_url">http://testcmm.herokuapp.com/api/</string> -->
    <!-- <string name="base_url">http://10.0.2.2:8000/api/</string>  -->
    <string name="hello">Hello World, CMMActivity!</string>
    <string name="app_name">CMM</string>
    
    <!-- New Main Page -->
    <string name="no_prev">No Previous</string>
    
    <!-- Main page -->
    <string name="welcome">Welcome to Change My Mood</string>
    <string name="no_signin">Continue without signin</string>
    <string name="with_signin">Signin with Facebook</string>
    
    <!-- Media page -->
    <string name="media_title">Select a media you want to use</string>
    <string name="media_picture">Picture</string>
    <string name="media_video">Video</string>
    <string name="media_text">Text</string>
    <string name="media_audio">Audio</string>
    
    <!-- Mood page -->
    <string name="mood_title">Select a mood you want to change to</string>
    <string name="mood_funny">Make Me Laugh</string>
    <string name="mood_enervate">Pump Me Up</string>
    <string name="mood_inspire">Inspire Me</string>
    <string name="mood_romantic">Need Some Romance</string>
    
    <string name="newmood_funny">Funny</string>
    <string name="newmood_romantic">Romantic</string>
    <string name="newmood_enervate">Enervate</string>
    <string name="newmood_inspiring">Inspiring</string>
    
    
    <!-- Content page -->
    <string name="thumbs_up">Thumbs Up</string>
    <string name="thumbs_down">Thumbs Down</string>
    <string name="rate_success_msg">rating sent to server</string>
    <string name="rate_fail_msg">Sorry!</string>
    <string name="pls_log_in">login to send rating to server</string>
    
    <!-- ContactUS -->
    <string name="contactus_title">Contact Us</string>
    <string name="info_siavash">Siavash Baratchi PM(barats@cs.washington)</string>
    <string name="info_lin">Hunlan Lin DEV(hunlan@cs.washington)</string>
    <string name="info_garret">Garret Sato DEV(satog@cs.washington)</string>
    <string name="info_hyunjoon">Hyunjoon Lee DEV(hjlee513@cs.washington)</string>
    <string name="info_youngmin">Youngmin Lee DEV(lym737@cs.washington)</string>
    <string name="projectemail">changemymood@uwcse403.com</string>
    <string name="contactus_info">We would love to hear from you. Please dont hesitate
        to contact us if you have any thoughts or concerns or you want to follow up our
        project and get the news about our future plans and versions. You can email us using 
        our project email address or contact any of our members individually
        or even contact the Computer Science and Engineering Department of University of
        Washington to get more information about the CSE403 class and the projects that students worked 
        on during this curse.\nOur Email Addresses</string>
    
    <!-- AboutUs page -->
    <string name="aboutus_title">About Us</string>
    <string name="siavash">Siavash Baratchi PM</string>
    <string name="lin">Hunlan Lin DEV</string>
    <string name="garrett">Garret Sato DEV</string>
    <string name="hyunjoon">Hyunjoon Lee DEV</string>
    <string name="youngmin">Youngmin Lee DEV</string>
    <string name= "AboutUsInfo">Change My Mood is a school project for the University
         of Washington Software Engineering Class (CSE403). We are a group of five senior CSE students at the University of Washington that decided to work on this project. The work is done under the advisory of professor Wayne Yamamoto. Our motivation was to create a powerful entertaining software that both can display our technical skills and our passion for developing software.  
		 Change My Mood is an application developed for smartphones running Android Platforms.
 	     The vision of this project is to build an application that attempts to induce the user’s
 		 feeling or mood by presenting a set of media contents associated with a user-chosen mood.
 		 Once user selects a target mood that he or she wants to be in and the type of 
 		 the media contents - pictures, videos, quotes, etc, the app searches for that 
 		 content on the web and shows a suggested set of media contents. Within two clicks, 
 		 a user is able to see a picture or watch a video that helps alleviate the user’s negative mood.
 		 For more information about our project visit the project</string>
	<string name="websiteLink">https://sites.google.com/a/uw.edu/change-my-mood/home</string>
    
    <!-- Menu -->
    <string name="str_menu_aboutus">About Us</string>
    <string name="str_menu_contactus">Contact Us</string>
    <string name="str_menu_signout">Sign Out</string>
    
    <!-- Facebook && Login -->
    <string name="facebook_appid">343378635757581</string>
    <string name="app_id">343378635757581</string>
    
    <!-- Video page -->
    <string name="loading">Loading...</string>
    <string name="download_plugin">Download Plugin</string>
    <string name="trouble">Trouble Playing Video?</string>
    <string name="fullscreen">Fullscreen</string>
    
    <!-- Temporary message -->
    <string name="notready">This is not ready yet. Please wait our updates!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    
    <string name="flash">Flash</string>
    
    <string name="flash_page">https://docs.google.com/open?id=0B-wnXVcJVHaXRDRwTmZxQTZSNXc</string>
    <string name="failure">action failed, please check your wireless connection</string>
    <string name="welcome">Welcome Back</string>
   
</resources>
