<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/VideoLayout"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="@drawable/hunlan_buttons"
        android:orientation="horizontal" >

        <WebView
            android:id="@+id/webvideo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="2dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ChangeVideo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VideoLayout"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/Previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:padding="10dp"
            android:text="@string/previous"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:onClick="nextVideo"
            android:padding="10dp"
            android:text="@string/next"
            android:textSize="18sp" />
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ChangeVideo"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/VThumbsUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:onClick="thumbsUp"
            android:padding="10dp"
            android:text="@string/thumbs_up"
            android:textSize="18sp" />

        <Button
            android:id="@+id/VThumbsDown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:onClick="thumbsDown"
            android:padding="10dp"
            android:text="@string/thumbs_down"
            android:textSize="18sp" />
        
        <Button
            android:id="@+id/Full_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:onClick="goFullscreen"
            android:padding="10dp"
            android:text="@string/fullscreen"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/hunlan_buttons"
        android:onClick="pluginRedirect"
        android:text="@string/download_plugin" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_margin="7dp"
        android:text="@string/trouble" />

</RelativeLayout>