<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000" >
    
    <LinearLayout
        android:id="@+id/ImageLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="#000000"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/picture"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:onClick="changePicture" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ChangePicture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageLayout"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/Previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:padding="10dp"
            android:text="@string/previous"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:onClick="changePicture"
            android:padding="10dp"
            android:text="@string/next"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ChangePicture"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/ThumbsUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:onClick="thumbsUp"
            android:padding="10dp"
            android:text="@string/thumbs_up"
            android:textSize="18sp" />

        <Button
            android:id="@+id/ThumbsDown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/hunlan_buttons"
            android:onClick="thumbsDown"
            android:padding="10dp"
            android:text="@string/thumbs_down"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>